--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <title>Simon</title>
+
+  <style>
+    #numeriCasuali{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 100px;
+    width: 100%;
+    height: 100vh;
+    }
+  </style>
 </head>
   <body>
-
-
+    <p id="numeriCasuali">
+    </p>
 
 
 
